fix alignment of logo image and header

--- a/7-2_ProjectTwo/assets/styles.css
+++ b/7-2_ProjectTwo/assets/styles.css
@@ -1,6 +1,21 @@
 /* contains the CSS styling for HTML elements in the AnimalShelter web app. */
 
 /* quick-filter button syle, not selected */
+.top-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo img {
+  width: 128px;
+}
+
+.header-text {
+  text-align: center;
+  flex-grow: 1;
+}
+
 .quick-filter {
   margin: 5px;
   padding: 8px 16px;
